Учеба/7 семестр/ТВПС/Lab4 (2)/grammar.txt
*Program:
	Statement*
Statement:
	ExpressionStatement
	VariableDeclaration
	VariableAssignment
	If
	While
ExpressionStatement:
	Expression ';'
VariableDeclaration:
	'var' Identifier '=' Expression ';'
VariableAssignment:
	Identifier '=' Expression ';'
If:
	'if' '(' Expression ')' Block
While:
	'while' '(' Expression ')' Block
Block:
	'{' Statement* '}'
Expession:
	Equality
Equality: NotImplementedException
Relational: NotImplementedException
Additive: NotImplementedException
Multiplicative:
	Multiplicative ("*" | "/" | "%") Primary
	Primary
// Primary: Primitive ('(' Arguments? ')' | '.' Identifier)*
Primary:
	Call
	MemberAccess
	Primitive
Call:
	Primary '(' Arguments? ')'
Arguments:
	Expression (',' Expression)*
MemberAccess:
	Primary '.' Identifier
Primitive:
	Number
	Identifier
	'(' Expression ')'
